--- a/index.html
+++ b/index.html
@@ -33,32 +33,35 @@
       
   </div>
   <div class="third-section">
- <div class="texto"></div>
+
+ <div class="texto">
+  <p>
+   </p>
+ </div>
 </div>
 <div class="fourt-section">
   <section class="hero">
     <div class="hero-inner" id="section-0">
       <figure></figure>
-      <h2 class="hero__title">Explore our world</h2>
+      <h2 class="hero__title">Hi, Klaudia &#x2661;  </h2>
     </div>
   </section>
   <section class="hero">
     <div class="hero-inner" id="section-1">
       <figure></figure>
-      <h2 class="hero__title">View all its beauty</h2>
+      <h2 class="hero__title"> I wanted you to know </h2>
     </div>
   </section>
   <section class="hero">
     <div class="hero-inner" id="section-2">
       <figure></figure>
-      <h2 class="hero__title">Take lots of photos</h2>
+      <h2 class="hero__title">That you are</h2>
     </div>
   </section>
   <section class="hero">
     <div class="hero-inner" id="section-3">
       <figure></figure>
-      <h2 class="hero__title">Each one of them pretty</h2>
-    </div>
+      <h2 class="hero__title"> The prittiest thing i've ever seen &#x2661; </h2>
   </section>
   <section class="content">
     <article class="content__inner">
@@ -92,6 +95,31 @@
           </p>
    </article>
   </section>
+  <div class="fith-section">
+  <section class="hero1">
+    <div class="hero-inner" id="section-0">
+      <figure></figure>
+      <h2 class="hero__title">Let's explore the world</h2>
+    </div>
+  </section>
+  <section class="hero1">
+    <div class="hero-inner" id="section-1">
+      <figure></figure>
+      <h2 class="hero__title">Let's view all its beauty</h2>
+    </div>
+  </section>
+  <section class="hero1">
+    <div class="hero-inner" id="section-2">
+      <figure></figure>
+      <h2 class="hero__title">Let's take lots of photos</h2>
+    </div>
+  </section>
+  <section class="hero1">
+    <div class="hero-inner" id="section-3">
+      <figure></figure>
+      <h2 class="hero__title">Each one of them pretty</h2>
+    </div>
+  </section></div>
   </div>
 
 
